Cambios en index.html desde backend paso 4

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1 aria-placeholder="FORMULARIO">FORMULARIO FORMULARIO FORMULARIO</h1>
+    <P>ESCRIBA PARA ENVIAR DATOS</P>
 </body>
 </html>
