--- a/index.html
+++ b/index.html
@@ -1,11 +1,101 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Práctica Formativa</title>
+  </head>
+  <body>
+    <div class="container mt-5">
+      <h1 class="text-center">Formulario de Usuario</h1>
+      <!-- Formulario de entrada de datos del usuario -->
+      <form id="userDataForm" class="p-4 border rounded shadow-sm">
+      <!-- Campo de texto para el nombre de usuario -->      
+        <div class="mb-3">
+          <label for="username" class="form-label">Nombre de usuario</label>
+          <input type="text" class="form-control" id="username" name="username" placeholder="Ingresa tu nombre de usuario" required>
+        </div>
+      <!-- Campo de texto para la contraseña -->
+        <div class="mb-3">
+          <label for="password" class="form-label">Key</label>
+          <input type="password" class="form-control" id="password" name="password" placeholder="soy el nuevo placeholder" placeholder="Ingresa tu contraseña" required>
+        </div>
+      <!-- Botón para enviar el formulario -->  
+        <button type="submit" class="btn btn-primary w-100">Enviar</button>
+      </form>
+    </div>
+    <!-- Script que gestiona el envío del formulario mediante AJAX -->
+    <script>
+      // Añade un "escuchador" al evento 'submit' del formulario
+      document.getElementById('userDataForm').addEventListener('submit', function(event) {
+        event.preventDefault(); // Evita que el Formulario recargue la página.
+        //Recolecta datos del Formulario
+        const formData = {
+          username: document.getElementById('username').value,
+          password: document.getElementById('password').value
+        };
+        // Realizar la llamada AJAX utilizando fetch
+        fetch('http://localhost:8000/index.html', {
+        method: 'POST',// Método HTTP
+        headers: {
+         'Content-Type': 'application/json'// Indica que el cuerpo se envía como JSON
+         },
+        body: JSON.stringify(formData) // Convierte los datos a formato JSON
+        })
+        .then(response => {
+        // Verifica si la respuesta es exitosa  
+         if (!response.ok) {
+        throw new Error('Error en la respuesta del servidor');
+        }
+         return response.json();// Convierte la respuesta a formato JSON
+     })
+        .then(data => {
+          // Muestra la respuesta del servidor en consola
+          console.log('Respuesta del servidor:', data);
+          alert('Hubo un error al enviar los datos');// Alerta si todo salió bien
+          alert('Datos enviados con éxito');
+        })
+        .catch(error => {
+          // Maneja cualquier error en la petición
+          console.error('Error al enviar los datos:', error);
+          alert('Hubo un error al enviar los datos'); // Alerta de error
+     });
+     });
+     
+    </script>
+    <!-- Documentación de la llamada AJAX -->
+      <!--
+        URL del Endpoint: 'http://localhost:8000/index.html'
+        Método: POST
+  
+        Encabezados:
+        Content-Type: application/json
+  
+        Parámetros Enviados:
+        {
+          "username": "nombre_de_usuario",
+          "password": "contraseña_del_usuario"
+        }
+  
+        Ejemplo de Datos Enviados:
+        {
+          "username": "veronica",
+          "password": "12345"
+        }
+  
+        Respuesta Esperada del Backend:
+        {
+          "success": true,
+          "message": "Usuario creado exitosamente"
+        }
+  
+        Manejo de Errores:
+        En caso de error, el servidor podría responder con:
+        {
+          "success": false,
+          "error": "Nombre de usuario ya existe"
+        }
+      -->
+    </body>
+    </html>
